fix: text overflow in ResourceHome.tsx

--- a/packages/amplication-client/src/Components/EllipsisText.scss
+++ b/packages/amplication-client/src/Components/EllipsisText.scss
@@ -10,6 +10,7 @@
     color: var(--black60);
     &:hover {
       color: var(--primary);
+      cursor: pointer;
     }
   }
 }
