--- a/packages/amplication-client/src/Resource/ResourceHome.scss
+++ b/packages/amplication-client/src/Resource/ResourceHome.scss
@@ -27,6 +27,7 @@ $circle-badge-border: 2px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 var(--default-spacing-small);
   }
 
   .circle-badge {
